tests/NormalTests/paczka1/fuzzy1/29684144.err
Error in line 16: 9Ivnn6CejzE S110 11,3
Error in line 12: HhS4RU A109 69,2
Error in line 33: 9Ivnn6CejzE S577 57,5
Error in line 27: HhS4RU S577 1,4
